# jungfraujoch-fork

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
broker/: CMakeLists.txt  JFJochBrokerHttp.cpp  JFJochBrokerHttp.h  JFJochBrokerHttp_Commands.cpp  JFJochBrokerHttp_DataProcessingSettings.cpp  JFJochBrokerHttp_DetectorSettings.cpp  JFJochBrokerHttp_ProtoBuf_JSON.h  JFJochBrokerHttp_Status.cpp  JFJochBrokerHttp_TIFF.cpp  JFJochBrokerService.cpp  JFJochBrokerService.h  JFJochServices.cpp  JFJochServices.h  JFJochStateMachine.cpp  JFJochStateMachine.h  README.md  jfjoch_broker.cpp  jfjoch_broker_http.cpp
common/: BackgroundEstimation.cpp  BackgroundEstimation.h  CMakeLists.txt  CommunicationBuffer.cpp  CommunicationBuffer.h  Coord.cpp  Coord.h  CrystalLattice.cpp  CrystalLattice.h  Definitions.h  DiffractionExperiment.cpp  DiffractionExperiment.h  DiffractionSpot.cpp  DiffractionSpot.h  FrameTransformation.cpp  FrameTransformation.h  FrameTransformationPreview.cpp  FrameTransformationPreview.h  GitInfo.cpp.in  GitInfo.h  ImageMetadata.h  ImagePusher.cpp  ImagePusher.h  JFCalibration.cpp  JFCalibration.h  JFJochCompressor.cpp  JFJochCompressor.h  JFJochException.cpp  JFJochException.h  JFModuleGainCalibration.cpp  JFModuleGainCalibration.h  JFPedestal.cpp  JFPedestal.h  JungfrauCalibration.cpp  JungfrauCalibration.h  Latch.cpp  Latch.h  Logger.cpp  Logger.h  NetworkAddressConvert.cpp  (+37 more)
compression/: CMakeLists.txt  CompressionAlgorithmEnum.h  JFJochCompressor.cpp  JFJochCompressor.h  JFJochDecompress.h  JFJochZstdCompressor.cpp  JFJochZstdCompressor.h  MaxCompressedSize.cpp  MaxCompressedSize.h
compression/bitshuffle/: bitshuffle.c
detector_control/: CMakeLists.txt  DetectorWrapper.cpp  DetectorWrapper.h  JFJochDetector.cpp  JFJochDetector.h  jfjoch_detector.cpp
detector_control/libserial/: SerialPort.cpp
fpga/: CMakeLists.txt  README.md
fpga/hdl/: action_config.v  action_wrapper.v  check_datamover_error.v  check_eth_busy.v  gen_xdma_descriptor.v  refclk300to100.v  resetn_sync.v
fpga/hls/: CMakeLists.txt  arp.cpp  data_and_cmd_stream_sync.cpp  data_collection_fsm.cpp  ethernet.cpp  hls_bitshuffle.cpp  hls_jfjoch.h  host_writer.cpp  icmp.cpp  internal_packet_generator.cpp  ip_header_checksum.h  ipv4.cpp  jf_conversion.cpp  load_calibration.cpp  sls_detector.cpp  timer.cpp  udp.cpp
fpga/host/: AcquisitionDevice.cpp  AcquisitionDevice.h  AcquisitionDeviceCounters.cpp  AcquisitionDeviceCounters.h  AcquisitionDeviceFilter.cpp  AcquisitionDeviceFilter.h  AcquisitionOfflineCounters.cpp  AcquisitionOfflineCounters.h  AcquisitionOnlineCounters.cpp  AcquisitionOnlineCounters.h  ActionConfig.h  CMakeLists.txt  Completion.cpp  Completion.h  GenerateOpenCAPIDeviceName.h  HLSSimulatedDevice.cpp  HLSSimulatedDevice.h  JFJochReceiver.cpp  JFJochReceiver.h  JFJochReceiverService.cpp  JFJochReceiverService.h  JFJochReceiverTest.cpp  JFJochReceiverTest.h  MakeAcquisitionDevice.cpp  MakeAcquisitionDevice.h  MockAcquisitionDevice.cpp  MockAcquisitionDevice.h  OpenCAPIDevice.cpp  OpenCAPIDevice.h  PCIExpressDevice.cpp  PCIExpressDevice.h  jfjoch_action_test.cpp  jfjoch_oc_status.cpp  jfjoch_pcie_fill_buffer.cpp  jfjoch_pcie_print_dev_buf.cpp  jfjoch_pcie_status.cpp
fpga/include/: LICENSE.HLS_Headers  parallel_stream.h
fpga/microblaze/: eth_config.cpp  start_eth.elf
fpga/pcie_driver/: CMakeLists.txt  Makefile  ioctl.h  jfjoch_dev.c  jfjoch_dev.h  jfjoch_drv.c  jfjoch_drv.h  jfjoch_function.c  jfjoch_ioctl.c  jfjoch_ioctl.h  jfjoch_memory.c  jfjoch_miscdev.c  jfjoch_pcie_setup.c
fpga/receiver/: CMakeLists.txt  JFJochReceiver.cpp  JFJochReceiver.h  JFJochReceiverService.cpp  JFJochReceiverService.h  JFJochReceiverTest.cpp  JFJochReceiverTest.h  jfjoch_action_test.cpp  jfjoch_receiver.cpp
fpga/scripts/: OC-AD9H3.hls_rx100G.nosim.defconfig  (+20 more)
frame_serialize/: CMakeLists.txt  CborErr.h  JFJochFrameDeserializer.cpp  JFJochFrameDeserializer.h  JFJochFrameSerializer.cpp  JFJochFrameSerializer.h  README.md
grpc/: CMakeLists.txt  JFJochDetectorClient.cpp  JFJochDetectorClient.h  JFJochIndexerClient.cpp  JFJochIndexerClient.h  JFJochReceiverClient.cpp  JFJochReceiverClient.h  JFJochTriggerClient.cpp  JFJochTriggerClient.h  JFJochWriterClient.cpp  JFJochWriterClient.h  JFJochWriterGroupClient.cpp  JFJochWriterGroupClient.h  gRPCServer_Template.h  jfjoch.proto
indexing/: CMakeLists.txt  CrystalLattice.cpp  CrystalLattice.h  FastFeedbackIndexerWrapper.cpp  FastFeedbackIndexerWrapper.h  IndexerWrapper.cpp  IndexerWrapper.h  JFJochIndexer.cpp  JFJochIndexer.h  JFJochIndexerService.cpp  JFJochIndexerService.h  XgandalfWrapper.cpp  XgandalfWrapper.h  main.cpp
tests/: AcquisitionCountersTest.cpp  AcquisitionDeviceCountersTest.cpp  AcquisitionDeviceFilterTest.cpp  ActionConfigTest.cpp  BackgroundEstimationTest.cpp  CBORTest.cpp  CMakeLists.txt  CommunicationBufferTest.cpp  CompressionBenchmark.cpp  CoordTest.cpp  DataAnalysisPerfTest.cpp  DataStreamCalibrationTest.cpp  DiffractionExperimentTest.cpp  FPGAIntegrationTest.cpp  FPGANetworkTest.cpp  FPGAUnitTest.h  FrameTransformationPreviewTest.cpp  FrameTransformationTest.cpp  HDF5DatasetWriteTest.cpp  HDF5WritingTest.cpp  HLSBitshuffleTest.cpp  ImageWriterTest.cpp  JFCalibrationTest.cpp  JFJochBrokerTest.cpp  JFJochFullIntegrationTest.cpp  JFJochReceiverIntegrationTest.cpp  JFJochWriterTest.cpp  JFPedestalTest.cpp  MockAcquisitionDeviceTest.cpp  PedestalCalcTest.cpp  PedestalPerfTest.cpp  PreviewTest.cpp  RadialIntegrationTest.cpp  RawToConvertedGeometryTest.cpp  SpotAnalyzeUnitTest.cpp  SpotFinderIntegration.cpp  StatusVectorTest.cpp  TIFFTest.cpp  ThreadSafeFIFOSetTest.cpp  XgandalfUnitTest.cpp  (+6 more)
writer/: CMakeLists.txt  HDF5DataFile.cpp  HDF5DataFile.h  HDF5MasterFile.cpp  HDF5MasterFile.h  HDF5NXmx.cpp  HDF5NXmx.h  HDF5Objects.cpp  HDF5Objects.h  HDF5Sum.cpp  HDF5Writer.cpp  HDF5Writer.h  JFJochWriter.cpp  JFJochWriter.h  JFJochWriterService.cpp  JFJochWriterService.h  MakeDirectory.h  ZMQHDF5FileStatusPublisher.cpp  ZMQHDF5FileStatusPublisher.h  ZMQImagePuller.cpp  ZMQImagePuller.h  jfjoch_writer.cpp  jfjoch_writer_test.cpp
(+51 files in other folders)
