ADD_SUBDIRECTORY(slsDetectorPackage)

ADD_EXECUTABLE(jfjoch_detector jfjoch_detector.cpp JFJochDetector.cpp JFJochDetector.h DetectorWrapper.cpp DetectorWrapper.h)

TARGET_LINK_LIBRARIES(jfjoch_detector CommonFunctions slsSupportShared slsDetectorShared)

INSTALL(TARGETS sls_detector_put sls_detector_get jfjoch_detector RUNTIME)
